# FinApp

./: .env.example  .gitignore  README.md  demo.py  preview.html  pyproject.toml
backend/: run.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  accounts.py  import_export.py  institutions.py  investment_tax.py  investments.py  payroll.py  plaid.py  retirement.py  retirement_forecast.py  taxes.py  transactions.py  users.py  websocket.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  account.py  financial_institution.py  investment.py  investment_tax.py  ledger.py  payroll.py  plaid.py  retirement.py  retirement_forecast.py  tax.py  transaction.py  user.py
backend/app/services/: monte_carlo_service.py  plaid_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/pages/: Accounts.jsx  Dashboard.jsx  Investments.jsx  Payroll.jsx  Retirement.jsx  Taxes.jsx  Transactions.jsx
frontend/src/styles/: App.css
ios-macos/: README.md
ios-macos/FinApp/: FinAppApp.swift
ios-macos/FinApp.xcodeproj/: project.pbxproj
ios-macos/FinApp/Models/: Models.swift
ios-macos/FinApp/Services/: APIService.swift  SyncService.swift
ios-macos/FinApp/Views/: AccountsView.swift  ContentView.swift  DashboardView.swift  TransactionsView.swift
