[project]
name = "finapp"
version = "0.1.0"
description = "Personal Finance Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg>=3.3",
    "sqlmodel>=0.0.22",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
